--- a/css/style.css
+++ b/css/style.css
@@ -209,6 +209,8 @@ img {
 }
 
 .allpips-main-header,
+.allpips-copy-trading .they-trade,
+.allpips-copy-trading .banner-section,
 .allpips-copy-trading .why-choose-allpips,
 .allpips-copy-trading .top-traders,
 .allpips-copy-trading .help-you {
