--- a/css/style.scss
+++ b/css/style.scss
@@ -316,6 +316,8 @@ img {
 //help you //
 
 .allpips-main-header,
+.allpips-copy-trading .they-trade,
+.allpips-copy-trading .banner-section,
 .allpips-copy-trading .why-choose-allpips,
 .allpips-copy-trading .top-traders,
 .allpips-copy-trading .help-you {
