--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,7 @@ img {
 .allpips-copy-trading .help-you-title {
   color: #481BCE;
   max-width: 420px;
-  text-align: left;
+  margin: 0 auto;
 }
 
 .allpips-copy-trading .help-you__title {
