--- a/css/style.scss
+++ b/css/style.scss
@@ -341,7 +341,7 @@ img {
 .allpips-copy-trading .help-you-title {
     color: $main-purple;
     max-width: 420px;
-    text-align: left;
+    margin: 0 auto;
 }
 
 .allpips-copy-trading .help-you__title {
